--- a/index.html
+++ b/index.html
@@ -3,3 +3,12 @@ layout: default
 title: 我的Blog
 ---
 <p>最新文章</p>
+    <ul>
+      {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <p>{{ post.excerpt }}</p>
+        </li>
+      {% endfor %}
+    </ul>
+
