--- a/404.html
+++ b/404.html
@@ -22,3 +22,8 @@ layout: default
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+
+    <script> 
+      console.log("test");
+        alert("hello");
+    </script>
